--- a/Tech_Test_04/week-four/index.html
+++ b/Tech_Test_04/week-four/index.html
@@ -8,6 +8,11 @@
     <script src="main.js" async defer></script>
   </head>
   <body>
+    <header></header>
+    <main>
+      <div id="modal"></div>
       <div id="target"></div>
+    </main>
   </body>
 </html>
+
